--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,17 @@
-/*  your css code here. If applicable */
+body{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	height:100vh;
+	margin:0px;
+}
+.box{
+	color: purple;
+	text-align: center;
+	width: 200px;
+	height: 200px;
+	border: 2px solid black;
+	background-color:lightblue;
+	text-align: center;
+	line-height: 150px;
+}
